--- a/main.css
+++ b/main.css
@@ -1,3 +1,10 @@
-body {
-    color: lightblue;
+html {
+    background-color: lightblue;
+}
+
+#pic {
+    background-image: url(picture.png);
+    background-repeat: no-repeat;
+    width: 150 px;
+    height: 150 px;
 }
